# Desktop_Small_Screen_Project

./: README.md
Hardware_design/chips_datasheet/屏幕/GDEW0154T8-data/GDEW0154T8-STM32F103例程（FL）-201022/Project/: JLinkLog.txt  mdk.uvgui.Administrator  mdk.uvgui.lucky2  mdk.uvgui_Administrator.bak  mdk.uvgui_lucky2.bak  mdk.uvopt  mdk.uvproj  mdk_mdk.dep
Hardware_design/chips_datasheet/屏幕/GDEW0154T8-data/GDEW0154T8-STM32F103例程（FL）-201022/Project/Debug/list/: mdk.map
Hardware_design/chips_datasheet/屏幕/GDEW0154T8-data/GDEW0154T8-STM32F103例程（FL）-201022/User/: Ap_29demo.h  Display_EPD_W21.c  Display_EPD_W21_spi.h  main.c
Software_design/main/: CMakeLists.txt  app_main.c  hello_world_main.c
Software_design/main/include/: ds_system_data.h
Software_design/main/include/data/: ds_data_image.h
Software_design/main/include/driver/: ds_ft6336.h  ds_screen.h
Software_design/main/include/fs/: ds_spiffs.h
Software_design/main/include/hal/: ds_gpio.h  ds_i2c.h  ds_nvs.h  ds_spi.h
Software_design/main/src/: ds_system_data.c
Software_design/main/src/driver/: ds_ft6336.c  ds_screen.c
Software_design/main/src/fs/: ds_spiffs.c
Software_design/main/src/hal/: ds_gpio.c  ds_i2c.c  ds_nvs.c  ds_spi.c  ds_timer.c
