idf_component_register(SRCS 
                            "app_main.c"
                            "src/hal/ds_timer.c"
                            "src/fs/ds_spiffs.c"
                            "src/hal/ds_nvs.c"
                            "src/ds_system_data.c"
                            "src/driver/ds_ft6336.c"
                            "src/hal/ds_i2c.c"
                    INCLUDE_DIRS 
                        "."
                        "./include/hal"
                        "./include/fs"
                        "./include"
                        "./include/driver")